<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include layout="@layout/progress_overlay"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingEnd="@dimen/space_s"
      android:paddingStart="@dimen/space_s"
      android:paddingTop="@dimen/space_s"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/connect_device_title"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:gravity="center"
        android:text="@string/connect_device_description"
        style="@style/TextAppearance.AppCompat.Medium"
        />


    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_xxxl"
        android:layout_marginStart="@dimen/space_xxxl"
        android:layout_marginTop="@dimen/space_l"
        android:stateListAnimator="@null"
        android:text="@string/open_settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/PrimaryButton"
        />

    <Button
        android:id="@+id/button_configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_xxxl"
        android:layout_marginStart="@dimen/space_xxxl"
        android:stateListAnimator="@null"
        android:text="@string/configure_device"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/GrayButton"
        />

  </LinearLayout>

</RelativeLayout>
