<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

  <include layout="@layout/progress_overlay"/>

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:background="@color/white"
      android:elevation="1dp"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      app:theme="@style/Base.ThemeOverlay.AppCompat.Light"
      app:titleTextAppearance="@style/Toolbar.TitleText"
      app:titleTextColor="@color/colorActionBarText"
      />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/new_password"
      android:inputType="textPassword"
      style="@style/EditTextStyle"
      />

  <EditText
      android:id="@+id/repeat_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/repeat_password"
      android:inputType="textPassword"
      style="@style/EditTextStyle"
      />

  <Button
      android:id="@+id/btn_reset_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/space_xxxl"
      android:layout_marginStart="@dimen/space_xxxl"
      android:layout_marginTop="@dimen/space_l"
      android:stateListAnimator="@null"
      android:text="@string/reset_password"
      android:textAllCaps="false"
      android:textColor="@color/white"
      style="@style/PrimaryButton"
      />

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      />
</LinearLayout>
