<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.settings.SettingsActivity"
    >

  <include layout="@layout/progress_overlay"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginTop="15dp"
          android:orientation="vertical"
          >

        <!--Content-->

        <!--First-->
        <LinearLayout
            android:id="@+id/notifications_enable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notifications_title"
                android:textColor="@color/colorTitleNotifications"
                android:textSize="20sp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/bad_air_alerts_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notifications_detail"
                android:textColor="@color/colorSubtitleNotifications"
                android:textSize="16sp"
                />

          </LinearLayout>

          <View
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              />

          <TextView
              android:id="@+id/settings_tv_notifications_enabled"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginRight="20dp"
              android:text="@string/settings_notifications_on"
              android:textColor="@color/colorNotificationsBlue"
              android:textSize="20sp"
              />

        </LinearLayout>
        <!--End First-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="#f5f5f5"
            />

        <!--Second-->
        <LinearLayout
            android:id="@+id/notifications_notify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="3"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notifications_notify"
                android:textColor="@color/colorTitleNotifications"
                android:textSize="20sp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/settings_tv_notify_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notifications_notify_detail"
                android:textColor="@color/colorSubtitleNotifications"
                android:textSize="16sp"
                />

          </LinearLayout>

          <View
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              />

          <ImageView
              android:id="@+id/imageView"
              android:layout_width="15dp"
              android:layout_height="15dp"
              android:layout_gravity="center"
              android:layout_marginRight="20dp"
              android:layout_weight="1"
              app:srcCompat="@drawable/ico_arrow"
              />

        </LinearLayout>
        <!--End Second-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#f5f5f5"
            />

        <Button
            android:id="@+id/settings_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:minHeight="1dp"
            android:paddingLeft="0dp"
            android:text="@string/settings_login"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorNotificationsBlue"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:id="@+id/settings_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:minHeight="1dp"
            android:paddingLeft="0dp"
            android:text="@string/settings_logout"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorNotificationsBlue"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <!--End Content-->
      </LinearLayout>

    </ScrollView>

  </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
