<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

  <include layout="@layout/progress_overlay"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:background="@color/white"
          android:elevation="1dp"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          app:theme="@style/Base.ThemeOverlay.AppCompat.Light"
          app:titleTextAppearance="@style/Toolbar.TitleText"
          app:titleTextColor="@color/colorActionBarText"
          />

      <EditText
          android:id="@+id/device_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/device_name"
          android:inputType="textPersonName"
          style="@style/EditTextStyle"
          />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_s"
          android:layout_marginTop="@dimen/space_s"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/space_l"
            android:text="@string/indoor_device"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_indoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:theme="@style/switchStyle"
            />

      </RelativeLayout>

      <Button
          android:id="@+id/btn_add_device"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/space_xxxl"
          android:layout_marginStart="@dimen/space_xxxl"
          android:layout_marginTop="@dimen/space_l"
          android:stateListAnimator="@null"
          android:text="@string/add_device"
          android:textAllCaps="false"
          android:textColor="@color/white"
          style="@style/PrimaryButton"
          />

      <Space
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="1"
          />
    </LinearLayout>

  </ScrollView>

</RelativeLayout>